frontend/test/should_pass/dpo_006.grg
rule r {
	dpo pattern {
		x:Node --> y:Node;
		y --> y;
		y --> y;
		z:Node;
	}
	modify {
	}
}

