frontend/test/should_fail/exec_030.grg
rule r {
  modify{
    y --> y;
    exec( (y:Node)=r ); // y cannot leave exec scope
  }
}
